--- a/main.yml
+++ b/main.yml
@@ -223,7 +223,7 @@ details:
 
 dashboard:
   title: Dashboard
-  channel: '#flip-mode-squad'
+  channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-dashboard-build
   frontend:
     paths:
@@ -300,6 +300,7 @@ insights:
       - id: policies
       - id: inventory
       - id: remediations
+      - id: registration
   top_level: true
 
 inventory:
@@ -418,6 +419,15 @@ rbac:
         title: Users
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
+registration:
+  title: Register Systems
+  channel: '#advisor'
+  deployment_repo: https://github.com/RedHatInsights/registration-assistant-build
+  frontend:
+    paths:
+      - /insights/registration
+  source_repo: https://github.com/RedHatInsights/registration-assistant/
+  
 remediations:
   title: Remediations
   api:
