Adds registration assistant
dupe of https://github.com/RedHatInsights/cloud-services-config/pull/252

--- a/main.yml
+++ b/main.yml
@@ -239,7 +239,7 @@ policies:
 
 dashboard:
   title: Dashboard
-  channel: '#flip-mode-squad'
+  channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-dashboard-build
   frontend:
     paths:
@@ -314,6 +314,7 @@ insights:
       - id: policies
       - id: inventory
       - id: remediations
+      - id: registration
   top_level: true
 
 inventory:
@@ -438,6 +439,15 @@ rbac:
         title: Users
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
+registration:
+  title: Register Systems
+  channel: '#advisor'
+  deployment_repo: https://github.com/RedHatInsights/registration-assistant-build
+  frontend:
+    paths:
+      - /insights/registration
+  source_repo: https://github.com/RedHatInsights/registration-assistant/
+  
 remediations:
   title: Remediations
   api:
