Added Commit Tracker (#258)

--- a/main.yml
+++ b/main.yml
@@ -162,6 +162,19 @@ chrome:
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
   source_repo: https://github.com/RedHatInsights/insights-chrome
 
+commit-tracker:
+  title: Commit Tracker
+  description: The Commit Tracker Tool
+  disabled_on_prod: true
+  deployment_repo: https://github.com/RedHatInsights/commit-tracker-frontend-build
+  api:
+    versions:
+      -v1
+  frontend:
+    title: Commit Tracker
+    paths:
+      - /internal/commit-tracker
+
 compliance:
   title: Compliance
   api:
