--- a/main.yml
+++ b/main.yml
@@ -222,7 +222,7 @@ details:
 
 dashboard:
   title: Dashboard
-  channel: '#flip-mode-squad'
+  channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-dashboard-build
   frontend:
     paths:
@@ -299,6 +299,7 @@ insights:
       - id: policies
       - id: inventory
       - id: remediations
+      - id: registration
   top_level: true
 
 inventory:
@@ -419,6 +420,15 @@ rbac:
       - id: users
         title: Users
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
+
+registration:
+  title: Register Systems
+  channel: '#advisor'
+  deployment_repo: https://github.com/RedHatInsights/registration-assistant-build
+  frontend:
+    paths:
+      - /insights/registration
+  source_repo: https://github.com/RedHatInsights/registration-assistant/
 
 remediations:
   title: Remediations
