--- a/main.yml
+++ b/main.yml
@@ -621,12 +621,11 @@ topological-inventory:
   source_repo: https://github.com/RedHatInsights/topological-inventory-frontend
 
 trust:
-  title: Insights Security
+  title: Insights security
   channel: '#advisor'
   top_level: true
   deployment_repo: https://github.com/RedHatInsights/trust-frontend-build
   frontend:
-    title: Insights Security
     paths:
       - /security/insights
   source_repo: https://github.com/RedHatInsights/trust-frontend
