NOTIF-13 expose notifications API doc

--- a/main.yml
+++ b/main.yml
@@ -272,6 +272,9 @@ integrations:
 
 notifications:
   title: Notifications
+  api:
+    versions:
+      - v1
   channel: '#cloudservices-notifications'
   deployment_repo: https://github.com/RedHatInsights/notifications-frontend-build
   frontend:
