Additions to sub nav for Automation Analytics: (#259) (#279)
- Added new route for Job Explorer.
- Title Cased sub nav items.
- Re-ordered items within sub nav.

(cherry picked from commit 6d48985da1632b7070c6e28eecc58a757a44b084)

Co-authored-by: kialam <digitalanime@gmail.com>

--- a/main.yml
+++ b/main.yml
@@ -90,10 +90,12 @@ automation-analytics:
         default: true
       - id: organization-statistics
         title: Organization Statistics
-      - id: automation-calculator
-        title: Automation calculator
+      - id: job-explorer
+        title: Job Explorer
       - id: notifications
         title: Notifications
+      - id: automation-calculator
+        title: Automation Calculator
   source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
 automation-hub:
