update product docs to beta

--- a/main.yml
+++ b/main.yml
@@ -257,6 +257,7 @@ docs:
       - id: api-docs
         reload: api
         default: true
+      - id: product
   top_level: true
 
 drift:
@@ -410,14 +411,14 @@ product:
   title: Product Documentation
   deployment_repo: https://github.com/RedHatInsights/docs-frontend-build
   frontend:
+    paths:
+      - /docs/product
     sub_apps:
       - id: insights
         title: Insights
         default: true
-        reload: product/insights
-      - id: cloud-management-services
-        title: Cloud Management Services
-        reload: product/cloud-management-services
+      - id: cost-management
+        title: Cost Management
   source_repo: https://github.com/RedHatInsights/docs-frontend
 
 rbac:
