--- a/main.yml
+++ b/main.yml
@@ -139,6 +139,12 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
+      - id: order-processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: orders
         title: Orders
       - id: approval
@@ -450,7 +456,7 @@ registration:
     paths:
       - /insights/registration
   source_repo: https://github.com/RedHatInsights/registration-assistant/
-  
+
 remediations:
   title: Remediations
   api:
