--- a/main.yml
+++ b/main.yml
@@ -135,6 +135,12 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
+      - id: order-processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: orders
         title: Orders
       - id: approval
@@ -375,7 +381,7 @@ openshift:
       - id: subscriptions
         title: Subscriptions
         group: openshift
-  source_repo: 
+  source_repo:
   top_level: true
 
 patch:
@@ -438,7 +444,7 @@ registration:
     paths:
       - /insights/registration
   source_repo: https://github.com/RedHatInsights/registration-assistant/
-  
+
 remediations:
   title: Remediations
   api:
@@ -553,7 +559,7 @@ trust:
     paths:
       - /security/insights
   source_repo: https://github.com/RedHatInsights/trust-frontend
-  
+
 user-preferences:
   title: User Preferences
   deployment_repo: https://github.com/RedHatInsights/user-preferences-frontend-build
