Add order-processes catalog navigation menu

--- a/main.yml
+++ b/main.yml
@@ -135,6 +135,12 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
+      - id: order-processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: orders
         title: Orders
       - id: approval
@@ -378,7 +384,7 @@ openshift:
       - id: overview
         title: Overview
         group: openshift
-  source_repo: 
+  source_repo:
   top_level: true
 
 patch:
