Refactored Cost Management navigation (#303)
This simply moves “Details” items up one level

--- a/main.yml
+++ b/main.yml
@@ -216,7 +216,10 @@ cost-management:
         title: Overview
         default: true
         group: cost-management
-      - id: details
+      - id: ocp
+        title: OpenShift
+        group: cost-management
+      - id: infrastructure
         group: cost-management
       - id: cost-models
         title: Cost models
@@ -224,14 +227,15 @@ cost-management:
   source_repo: https://github.com/project-koku/
   mailing_list: cost-mgmt@redhat.com
 
-details:
-  title: Details
+infrastructure:
+  title: Infrastructure
   frontend:
     sub_apps:
-      - id: ocp
-        title: OpenShift
       - id: aws
-        title: Infrastructure
+        title: Amazon Web Services
+        default: true
+      - id: azure
+        title: Microsoft Azure
 
 policies:
   title: Policies
@@ -580,7 +584,7 @@ trust:
     paths:
       - /security/insights
   source_repo: https://github.com/RedHatInsights/trust-frontend
-  
+
 user-preferences:
   title: User preferences
   deployment_repo: https://github.com/RedHatInsights/user-preferences-frontend-build
