--- a/main.yml
+++ b/main.yml
@@ -435,7 +435,7 @@ my-user-access:
   title: My user access
   channel: '#platform-experience'
   frontend:
-    app-base: rbac
+    app_base: rbac
     paths:
       - /settings
       - /settings/my-user-access
