Change app-base to app_base

--- a/main.yml
+++ b/main.yml
@@ -373,7 +373,7 @@ my-user-access:
   title: My user access
   channel: '#platform-experience'
   frontend:
-    app-base: rbac
+    app_base: rbac
     paths:
       - /settings
 
