Add "Connect to Hub" sub nav for Automation Hub (#308)
(cherry picked from commit 6e7d33925db47de498ec020a11cd8e4a1a83f152)

--- a/main.yml
+++ b/main.yml
@@ -113,6 +113,8 @@ automation-hub:
         title: My namespaces
       - id: repositories
         title: Repo Management
+      - id: token
+        title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
