Backport hub menu updates (#309)
* Add repo management link to AH sidebar (#292)

Signed-off-by: Andrew Crosby <acrosby@redhat.com>
(cherry picked from commit a4bd8037aea6c88d0a9b4cbf1eedabbd7b38d6ab)

* Add "Connect to Hub" sub nav for Automation Hub (#308)

(cherry picked from commit 6e7d33925db47de498ec020a11cd8e4a1a83f152)

Co-authored-by: Andrew Crosby <acrosby@redhat.com>

--- a/main.yml
+++ b/main.yml
@@ -112,6 +112,10 @@ automation-hub:
         title: Partners
       - id: my-namespaces
         title: My namespaces
+      - id: repositories
+        title: Repo Management
+      - id: token
+        title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
