--- a/main.yml
+++ b/main.yml
@@ -111,6 +111,10 @@ automation-hub:
         title: Partners
       - id: my-namespaces
         title: My namespaces
+      - id: repositories
+        title: Repo Management
+      - id: token
+        title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
