--- a/main.yml
+++ b/main.yml
@@ -136,6 +136,12 @@ catalog:
           method: hasPermissions
           args:
             - [catalog:portfolios:create]
+      - id: order-processes
+        title: Order processes
+        permissions:
+          method: hasPermissions
+          args:
+            - [catalog:order_processes:read]
       - id: orders
         title: Orders
       - id: approval
