--- a/main.yml
+++ b/main.yml
@@ -470,13 +470,12 @@ openshift-streams:
       - /application-services/openshift-streams
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
 
-openshift-streams-strimzi-ui:
-  title: Strimzi UI for Red Hat OpenShift Streams
-  deployment_repo: https://github.com/RedHatInsights/openshift-streams-strimzi-ui-build
+rhosak-data-plane-ui-build:
+  title: Data Plane UI for RHOSAK
+  deployment_repo: https://github.com/RedHatInsights/rhosak-data-plane-ui-build/
   frontend:
     paths:
-      - /application-services/openshift-streams-strimzi-ui
-  source_repo: https://github.com/strimzi/strimzi-ui
+      - /application-services/rhosak-data-plane-ui-build
 
 patch:
   title: Patch
