Add edge app/bundle

--- a/main.yml
+++ b/main.yml
@@ -298,6 +298,22 @@ drift:
         reload: drift/baselines
   source_repo: https://github.com/RedHatInsights/drift-frontend
 
+edge:
+  title: Edge for RHEL
+  disabled_on_prod: true
+  deployment_repo: https://github.com/RedHatInsights/edge-frontend-build
+  source_repo: https://github.com/RedHatInsights/edge-frontend
+  top_level: true
+  frontend:
+    title: Edge for RHEL
+    paths:
+      - /edge
+      - /edge/groups
+    sub_apps:
+      - id: groups
+        default: true
+        title: Groups
+
 frontend-assets:
   title: Frontend Assets
   deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
