mua for ci-stable

--- a/main.yml
+++ b/main.yml
@@ -373,6 +373,15 @@ migration-analytics:
       - /migrations/migration-analytics
   source_repo: https://github.com/project-xavier/xavier-ui
 
+my-user-access:
+  title: My user access
+  channel: '#platform-experience'
+  frontend:
+    app_base: rbac
+    paths:
+      - /settings
+      - /settings/my-user-access
+
 openshift:
   title: OpenShift (OCM)
   api:
@@ -431,10 +440,11 @@ rbac:
     versions:
       - v1
   deployment_repo: https://github.com/RedHatInsights/rbac-frontend-deploy.git
+  permissions:
+    method: isOrgAdmin
   frontend:
     title: User access
     paths:
-      - /settings
       - /settings/rbac
     sub_apps:
       - id: users
@@ -504,8 +514,9 @@ settings:
   top_level: true
   frontend:
     sub_apps:
-      - id: rbac
+      - id: my-user-access
         default: true
+      - id: rbac
       - id: sources
       - id: applications
 
