fix: RHOSAK is beta atm
Fixes https://issues.redhat.com/browse/MGDSTRM-1075

--- a/main.yml
+++ b/main.yml
@@ -477,6 +477,8 @@ application-services:
 
 openshift-streams:
   title: OpenShift Streams for Apache Kafka
+  api:
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/rhosak-dashboard-build
   frontend:
     paths:
