--- a/main.yml
+++ b/main.yml
@@ -516,10 +516,16 @@ rbac:
       - id: users
         title: Users
         default: true
+        paths:
+        - /insights/rbac/users
       - id: roles
         title: Roles
+        paths:
+        - /insights/rbac/roles
       - id: groups
         title: Groups
+        paths:
+        - /insights/rbac/groups
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
 registration:
