add ros to main.yml

--- a/main.yml
+++ b/main.yml
@@ -491,6 +491,16 @@ rhel-sw:
       - id: x86
         title: x86
 
+ros:
+  title: Resource Optimization
+  channel: '#team-ros'
+  deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
+  frontend:
+      title: Resource Optimization
+      paths:
+          - /insights/ros
+  source_repo: https://github.com/RedHatInsights/ros-frontend
+
 ruledev:
   title: Rule Development
   api:
