--- a/main.yml
+++ b/main.yml
@@ -326,6 +326,7 @@ insights:
       - id: inventory
       - id: remediations
       - id: registration
+      - id: ros
   top_level: true
 
 inventory:
