--- a/main.yml
+++ b/main.yml
@@ -369,6 +369,18 @@ infrastructure:
               - url: '/api/cost-management/v1/sources/?type=AZURE'
                 matcher: 'isNotEmpty'
                 accessor: 'data'
+      - id: gcp
+        title: Google Cloud Provider
+        permissions:
+          - method: apiRequest
+            args:
+              - url: '/api/cost-management/v1/user-access/?type=GCP'
+                accessor: 'data'
+          - method: apiRequest
+            args:
+              - url: '/api/cost-management/v1/sources/?type=GCP'
+                matcher: 'isNotEmpty'
+                accessor: 'data'
 
 ingress:
   title: Ingress
