--- a/main.yml
+++ b/main.yml
@@ -304,6 +304,14 @@ frontend-assets:
   deployment_repo: https://github.com/RedHatInsights/frontend-assets-build.git
   source_repo: https://github.com/RedHatInsights/frontend-assets
 
+image-builder:
+  title: Image Builder
+  deployment_repo: https://github.com/RedHatInsights/image-builder-frontend-build
+  frontend:
+    paths:
+      - /insights/image-builder
+  source_repo: https://github.com/osbuild/image-builder-frontend
+
 ingress:
   title: Ingress
   api:
