--- a/main.yml
+++ b/main.yml
@@ -358,6 +358,7 @@ insights:
       - id: patch
       - id: drift
       - id: policies
+      - id: image-builder
       - id: inventory
       - id: remediations
       - id: registration
