Add rheas-guides-build repo for module federation

--- a/main.yml
+++ b/main.yml
@@ -525,6 +525,10 @@ rhosak-control-plane-ui-build:
   title: Control Plane UI for RHOSAK
   deployment_repo: https://github.com/RedHatInsights/rhosak-control-plane-ui-build
 
+rhoas-guides-build:
+  title: Guides for RHOAS
+  deployment_repo: https://github.com/RedHatInsights/rhoas-guides-build
+
 patch:
   title: Patch
   api:
