--- a/main.yml
+++ b/main.yml
@@ -344,10 +344,19 @@ edge:
     paths:
       - /edge
       - /edge/groups
+      - /edge/devices
+      - /edge/canaries
     sub_apps:
       - id: groups
         default: true
         title: Groups
+        group: groups
+      - id: devices
+        title: Devices
+        group: groups
+      - id: canaries
+        title: Canaries
+        group: groups
 
 frontend-assets:
   title: Frontend Assets
