--- a/main.yml
+++ b/main.yml
@@ -541,34 +541,19 @@ openshift:
 
 application-services:
   title: OpenShift Application Services
-  frontend:
-    title: OpenShift Application Services
-    sub_apps:
-      - id: openshift-streams
-        default: true
-      - id: quickstarts
-  top_level: true
-
-openshift-streams:
-  title: OpenShift Streams for Apache Kafka
   api:
     isBeta: true
   deployment_repo: https://github.com/RedHatInsights/rhosak-dashboard-build
   frontend:
-    paths:
-      - /application-services
-      - /application-services/openshift-streams
+    title: OpenShift Application Services
+    sub_apps:
+      - id: openshift-streams
+        title: "OpenShift Streams for Apache Kafka"
+        default: true
+      - id: quickstarts
+        title: "QuickStarts"
+  top_level: true
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
-
-quickstarts:
-  title: QuickStarts
-  api:
-    isBeta: true
-  deployment_repo: https://github.com/RedHatInsights/rhoas-guides-build
-  frontend:
-    paths:
-      - /application-services/quickstarts
-  source_repo: https://github.com/bf2fc6cc711aee1a0c2a/guides
 
 rhosak-data-plane-ui-build:
   title: Data Plane UI for RHOSAK
